--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1069,22 +1069,6 @@ padding-top: 5px;
   opacity: 1;
 }
 
-@media screen and (max-width: 1000px)  {
-    .container {
-        width: 640px;
-    }
-}
-
-@media screen and (max-width: 1200px)  and (min-width: 1000px) {
-    .container {
-        width: 855px;
-    }
-}
-@media screen and (min-width: 1200px)  {
-    .container {
-          width: 1070px;
-    }
-}
 
 .container_login{
   background-color: white;
@@ -1366,13 +1350,24 @@ margin-left: -2px;
 }
 
 .input_edit{
-  border-radius: 5px;
-  border-color:#767676;
+  color:#858585;
+  box-shadow: -1px 2px 5px -3px rgba(0, 0, 0, 0.3) inset;
+
+  border-color:#c8c8c8;
   padding: 2px;
   padding-left: 3px;
   border-style: solid;
   border-width: 1px;
   font-size:14px;
+
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.input_edit:focus{
+  color:black;
+  box-shadow: -1px 2px 5px -5px rgba(0, 0, 0, 0.3) inset;
 }
 
 .col1{
@@ -1380,10 +1375,11 @@ margin-left: -2px;
 }
 
 #description_edit{
-  max-width: 700px;
-  min-width: 700px;
-
+  max-width: 930px;
+  min-width:930px;
 }
+
+
 
 .edit_bouton{
   display: inline-block;
@@ -1393,9 +1389,7 @@ margin-left: -2px;
   background-color: white;
   border-width: 1px;
   border-style: solid;
-  -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
+
 }
 
 .edit_bouton:hover{
@@ -1408,6 +1402,56 @@ margin-left: -2px;
 
 .edit_form{
   padding-bottom: 28px;
+}
+
+#time_fr{
+  font-weight: 400;
+}
+
+
+
+@media screen and (max-width: 1000px)  {
+    .container {
+        width: 640px;
+    }
+
+    #description_edit{
+      max-width: 500px;
+      min-width:500px;
+    }
+
+    .input_edit{
+      max-width: 500px;
+    }
+}
+
+@media screen and (max-width: 1200px)  and (min-width: 1000px) {
+    .container {
+        width: 855px;
+    }
+
+    #description_edit{
+      max-width: 715px;
+      min-width:715px;
+    }
+
+    .input_edit{
+      max-width: 715px;
+    }
+}
+@media screen and (min-width: 1200px)  {
+    .container {
+          width: 1070px;
+    }
+
+    #description_edit{
+      max-width: 930px;
+      min-width:930px;
+    }
+
+    .input_edit{
+      max-width: 930px;
+    }
 }
 
 
