--- a/videos/templates/edit_video.html
+++ b/videos/templates/edit_video.html
@@ -5,7 +5,7 @@
 {{message}}
 {% endif %}
 
-<div class="container">
+<div class="container" id="div_form">
 
 
 
@@ -32,12 +32,14 @@
 
   <tr>
     <th class="col1">   <label for="duree">Durée :<label> </th>
-    <th> <input class="input_edit" id="duree" type="number" name="duree" value="{{v.duree}}" min="1" step="1"/> </th>
+    <th> <input class="input_edit" id="duree" type="number" name="duree" value="{{v.duree}}" min="1" step="1" onkeyup="update_time()" onchange="update_time()"/>
+      <span id="time_fr"></span>
+    </th>
   </tr>
 
   <tr>
     <th class="col1">     <label for="category">Catégorie :<label> </th>
-    <th>   <select class="input_edit" name="category">
+    <th>   <select class="input_edit" name="category" id="select_category_edit_vid">
       {% for c in categories %}
           <option {% if v.category == c %} selected {% endif %} value="{{c.id}}">{{c.titre}}</option>
       {% endfor %}
@@ -66,9 +68,37 @@
 </div>
 <script type="text/javascript">
 
+
+
+
 defocus('titre');
 defocus('url');
+update_time();
 
+set_size_duree();
+
+  function set_size_duree(){
+    var element=document.getElementById("select_category_edit_vid");
+    var style = window.getComputedStyle(element);
+    var debut= parseInt(style.getPropertyValue('width'));
+    document.getElementById("duree").style.width=debut-6+"px";
+  }
+
+  function update_time(){
+    var sec_num = parseInt(document.getElementById("duree").value);
+    var hours   = Math.floor(sec_num / 3600);
+    var minutes = Math.floor((sec_num - (hours * 3600)) / 60);
+    var seconds = sec_num - (hours * 3600) - (minutes * 60);
+
+
+    if(hours==0){hours='';}
+    else{hours=hours + " h";}
+
+   if (minutes==0){minutes='';}
+   else{minutes=minutes + " min";}
+
+   document.getElementById("time_fr").innerHTML="ce qui fait "+ hours+' '+minutes+' et '+seconds+' s.';
+  }
 
   function linear(i){
     return i;
@@ -80,12 +110,16 @@ defocus('url');
 
 
   function ffocus(element_namee){
+    var element=document.getElementById("description_edit");
+    var style = window.getComputedStyle(element);
+    var max_width= parseInt(style.getPropertyValue('width'));
+
     var element=document.getElementById(element_namee);
     var style = window.getComputedStyle(element);
     var debut= parseInt(style.getPropertyValue('width'));
-    var fin =700;
-    animate({
-  duration: 500,
+    var fin =max_width;
+    animate({ 
+  duration: 200,
   timing:makeEaseInOut(linear),
   draw: function(progress) {
   document.getElementById(element_namee).style.width  = debut+progress*(fin-debut)+ 'px';
@@ -109,7 +143,7 @@ defocus('url');
     document.getElementById("hidden_"+element_name).style.dislay="hidden";
 
     animate({
-  duration: 500,
+  duration: 200,
   timing:makeEaseInOut(linear),
   draw: function(progress) {
   document.getElementById(element_name).style.width  = debut+progress*(fin-debut)+ 'px';
