Ajout du template

--- a/videos/templates/edit_proj.html
+++ b/videos/templates/edit_proj.html
@@ -4,6 +4,46 @@
 {% if message %}
 {{message}}
 {% endif %}
+<script type="text/javascript">
+angular.module("demo").controller("SimpleDemoController", function($scope) {
+
+  $scope.models = {
+      selected: null,
+      lists: {"A": [], "B": []}
+  };
+
+  // Generate initial model
+  for (var i = 1; i <= 3; ++i) {
+      $scope.models.lists.A.push({label: "Item A" + i});
+      $scope.models.lists.B.push({label: "Item B" + i});
+  }
+
+  // Model to JSON for demo purpose
+  $scope.$watch('models', function(model) {
+      $scope.modelAsJson = angular.toJson(model, true);
+  }, true);
+
+});
+</script>
+
+<div class="container">
+  <ul dnd-list="list">
+      <!-- The dnd-draggable directive makes an element draggable and will
+           transfer the object that was assigned to it. If an element was
+           dragged away, you have to remove it from the original list
+           yourself using the dnd-moved attribute -->
+      <li ng-repeat="item in list"
+          dnd-draggable="item"
+          dnd-moved="list.splice($index, 1)"
+          dnd-effect-allowed="move"
+          dnd-selected="models.selected = item"
+          ng-class="{'selected': models.selected === item}"
+          >
+          {{item.label}}
+      </li>
+  </ul>
+</div>
+
 
 <div class="container">
 
@@ -11,6 +51,8 @@
 <h1>Édition d'une proj</h1>
 
 {% if p %}
+
+
 
 <form action="{% url 'edit_proj' p.id %}" method="post">
 
@@ -43,6 +85,8 @@
         <br/>
     {% endfor %}
     <br/>
+
+
 
     <input type="submit" value="Modifier la proj"/>
 
