--- a/videos/templates/edit_proj.html
+++ b/videos/templates/edit_proj.html
@@ -7,36 +7,6 @@
 
 
 
-{% load static %}
-<script src={% static "angular-drag-and-drop-lists.js" %}></script>
-<script src={% static "script.js" %}></script>
-
-
-<div class="simpleDemo" ng-controller="SimpleDemoController">
-    <ul dnd-list="list">
-        <li ng-repeat="item in models.lists.A"
-            dnd-draggable="item"
-            dnd-moved="models.lists.A.splice($index, 1)"
-            dnd-effect-allowed="move"
-            dnd-selected="models.selected = item"
-            ng-class="{'selected': models.selected === item}">
-            {{item.label}} 
-        </li>
-    </ul>
-
-    <ul dnd-list="list">
-        <li ng-repeat="item in models.lists.B"
-            dnd-draggable="item"
-            dnd-moved="models.lists.B.splice($index, 1)"
-            dnd-effect-allowed="move"
-            dnd-selected="models.selected = item"
-            ng-class="{'selected': models.selected === item}">
-            {{item.label}}
-        </li>
-    </ul>
-</div>
-
-
 <div class="container">
 
 
@@ -46,43 +16,54 @@
 
 
 
-<form action="{% url 'edit_proj' p.id %}" method="post">
+
+<form action="{% url 'edit_proj' p.id %}" metdod="post">
+  <table class="table_edit_proj_haut">
 
     {% csrf_token %}
+<tr>
+  <th><label for="titre">Titre :</label></th>
+  <td>  <input class="input_edit" id="titre" size="50" type="text" value="{{p.titre}}" name="titre"/></td>
+</tr>
 
-    <label for="titre">Titre :</label>
-    <input id="titre" size="50" type="text" value="{{p.titre}}" name="titre"/>
-    <br/><br/>
+<tr>
+  <th>  <label for="image">Image (URL) :<label></th>
+  <td>
+    <input class="input_edit" id="image" size="100" type="text" name="image" value="{{p.image}}"/></td>
+</tr>
 
-    <label for="image">Image (URL) :<label>
-    <input id="image" size="100" type="text" name="image" value="{{p.image}}"/>
-    <br/><br/>
+<tr>
+  <th>  <label for="promo">Promo :<label></th>
+  <td><input class="input_edit" id="promo" type="number" name="promo" value="{{p.promo}}" min="1991" max="2030" step="1"/></td>
+</tr>
 
-    <label for="promo">Promo :<label>
-            <input id="promo" type="number" name="promo" value="{{p.promo}}" min="1991" max="2030" step="1"/>
-    <br/><br/>
+<tr>
+  <th>  <label for="category">Catégorie :<label></th  >
+  <td><select class="input_edit" name="category">
+  {% for c in categories %}
+      <option {% if p.category == c %} selected {% endif %} value="{{c.id}}">{{c.titre}}</option>
+  {% endfor %}
+  </select></td>
+</tr>
+</table>
 
-    <label for="category">Catégorie :<label>
-    <select name="category">
-    {% for c in categories %}
-        <option {% if p.category == c %} selected {% endif %} value="{{c.id}}">{{c.titre}}</option>
-    {% endfor %}
-    </select>
-    <br/><br/>
+<table>
+
 
     {% for r in p.relation_proj_set.all %}
-        <input type="number" id="r_video_{{r.id}}" name ="r_video_{{r.id}}" value="{{r.ordre}}" max="999" min="-999"/>
+    <tr>
+      <td><input type="number" id="r_video_{{r.id}}" name ="r_video_{{r.id}}" value="{{r.ordre}}" max="999" min="-999"/></td>
+      <td>  <label for="r_video_{{r.id}}">{{r.video.titre}}</label></td>
+    </tr>
 
-        <label for="r_video_{{r.id}}">{{r.video.titre}}</label>
-        <br/>
     {% endfor %}
-    <br/>
+
+</table>
 
 
 
-    <input type="submit" value="Modifier la proj"/>
 
-
+<input type="submit" value="Modifier la proj"/>
 </form>
 
 </div>
