Début du design de la page édit proj

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -153,7 +153,10 @@ function cacher_results(){
   <div id="navigation_bar">
     <a href="{% url 'index' %}">
     <div class="navigation_bar_titre">
-      <h1> JTX </h1>
+      <h1 > JTX </h1>
+    </div>
+    <div class="entourer_titre">
+       
     </div>
     </a>
 
