--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -155,9 +155,9 @@ function cacher_results(){
     <div class="navigation_bar_titre">
       <h1 > JTX </h1>
     </div>
-    <div class="entourer_titre">
-       
-    </div>
+    <!-- <div class="entourer_titre">
+
+    </div> -->
     </a>
 
     <div id="search_bar" class="barre_de_recherche">
