--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1435,6 +1435,7 @@ margin-left: -2px;
 }
 
 .edit_form th{
+  vertical-align: top;
   padding-top: 5px;
   padding-bottom: 5px;
 }
@@ -1449,6 +1450,16 @@ margin-left: -2px;
 
 .table_edit_proj_haut td,th{
   text-align: left;
+}
+
+.edit_proj_table_vid{
+  margin: auto;
+}
+
+.edit_proj_table_vid td{
+  padding-left: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 @media screen and (max-width: 1000px)  {
