test apparence videos

--- a/videos/templates/projs.html
+++ b/videos/templates/projs.html
@@ -8,31 +8,38 @@
 	<h1>Toutes les proj'</h1>
 	<div class="liste_videos">
 	{% for p in elements %}
-	<div class="bloc_video">
 
-		<a href="{% url 'proj' p.id %}">
-				<figure>
-						<img class="proj_image" src="{{p.image}}"/>
-						<figcaption class="legende_vid_duree">
-                            {{p|duration_proj}}
-						</figcaption>
-				</figure>
-		</a>
 
-		<a href="{% url 'proj' p.id %}">
-				<div class="legende_vid_titre">
-						{{p.titre|short}}
+			<div class="bloc_video">
+
+				<a href="{% url 'proj' p.id %}">
+						<figure class="figure_liste">
+								<img class="img_vid" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Aspect_ratio_16_9_example.jpg"/>
+								<div class="legende_vid_duree">
+											{{p|duration_proj}}
+								</div>
+
+						</figure>
+				</a>
+
+				<a href="{% url 'proj' p.id %}">
+						<div class="legende_vid_titre">
+								{{p.titre|short}}
+						</div>
+				</a>
+
+				<div class="legende_vid_auteur">
+							<a href="#">
+								JTX2015
+							</a>
 				</div>
-		</a>
+				<div class="legende_vid_auteur">
+								{{p.views}}
+							 vues
+							 <span class="petit_point">&#9679;</span>
 
-		<div class="legende_vid_auteur">
-					<a href="#">
-						JTX2015
-					</a>
-					-
-					  {{p.views}}
-					 vues
-		</div>
+							 il y a 1 an
+				</div>
 
 	</div>
 	{% endfor %}
