--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -75,7 +75,7 @@
       else{document.getElementById("lateral_bar").style.display = "none";}
     }
     else {
-      document.getElementById("lateral_bar").style.display = "unset";
+      document.getElementById("lateral_bar").style.display = "none";
     }
   }
 
