--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -10,7 +10,7 @@
 <div style="margin-top:0;display:table">
 <div style="margin-top:0;display:block">
 <div style="margin-top:0;display:table-cell;vertical-align:top;padding-right:10px;">
-<!--> <div style="margin-top:0;display:table-cell;vertical-align:top"></-->
+<!--> <div style="margin-top:0;display:table-cell;vertical-align:top">
 
 <video id="video" width="720px" height="405px" controls></video>
 
