--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -256,7 +256,7 @@ border-style: none;
 }
 
 #lateral_bar{
-
+  display: none;
   font-size: 12px;
     border-style: solid;
     border-width: 1px;
