--- a/videos/templates/projs.html
+++ b/videos/templates/projs.html
@@ -29,8 +29,8 @@
 				</a>
 
 				<div class="legende_vid_auteur">
-							<a href="#">
-								JTX2015
+							<a href="{% url 'jtx' 2015 %}">
+								  JTX 20{{ p | short_promo }}
 							</a>
 				</div>
 				<div class="legende_vid_auteur">
@@ -38,7 +38,7 @@
 							 vues
 							 <span class="petit_point">&#9679;</span>
 
-							 il y a 1 an
+							  {{ p.date|date:"d/m/Y" }}
 				</div>
 
 	</div>
