--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -4,8 +4,8 @@
 {% if elements %}
 
 {% load app_filters %}
-<div class="container" style="margin-top:15px;">
-
+<div class="container">
+<h1>Toutes les vidéos</h1>
 
 <div class="liste_videos">
 	{% for v in elements %}
